<resources>
    <string name="app_name">InstantShopping</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="image_of_a_cart">Image of a cart</string>
    <string name="first_name">Enter First Name</string>
    <string name="last_name">Enter Last Name</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="login_text">Enter your credentials to login</string>
    <string name="enter_your_email_address">Enter your Email Address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="don_t_have_an_account_click_here_to_register">Don\'t have an Account? Click here to register</string>
    <string name="owner_name">Jacob Okia</string>
    <string name="manager">Manager</string>
    <string name="total_purchases">Total Purchases</string>
    <string name="total_sales">Total Sales</string>
    <string name="products">Products</string>
    <string name="sales">Sales</string>
    <string name="orders">Orders</string>
    <string name="purchases">Purchases</string>
    <string name="products_list">Products List</string>
    <string name="upload_image">Upload Image</string>
    <string name="create_a_product">Create a Product</string>
    <string name="enter_brand_name">Enter Brand Name</string>
    <string name="enter_product_price">Enter Product Price</string>
    <string name="enter_product_description">Enter Product Description</string>
    <string name="enter_product_quantity">Enter Product Quantity</string>
    <string name="enter_product_category">Enter Product Category</string>
    <string name="enter_product_expiry_date">Enter Expiry date</string>
    <string name="save_a_product">Save a Product</string>
    <string name="add_image">Add Image</string>
    <string name="shop">Shop</string>
    <string name="cart">Cart</string>
    <string name="my_order">My Order</string>
    <string name="account">Account</string>
    <string name="fruits">Fruits</string>
    <string name="bread">Bread</string>
    <string name="create_bread">Create Bread</string>
    <string name="enter_bread_price">Enter Bread Price</string>
    <string name="enter_bread_description">Enter Bread Description</string>
    <string name="enter_bread_quantity">Enter Bread Quantity</string>
    <string name="enter_bread_category">Enter Bread Category</string>
    <string name="save_bread">Save Bread</string>
    <string name="create_meat">Create Meat</string>
    <string name="create_meat_name">Create Meat Name</string>
    <string name="enter_vegetable_name">Enter Vegetable Name</string>
    <string name="enter_vegetable_price">Enter Vegetable Price</string>
    <string name="save_vegetable">Save Vegetable</string>
    <string name="create_vegetable">Create Vegetable</string>
    <string name="create_milk_product">Create Milk Product</string>
    <string name="enter_milk_name">Enter Milk Name</string>
    <string name="enter_milk_price">Enter Milk price</string>
    <string name="enter_milk_description">Enter Milk Description</string>
    <string name="enter_milk_quantity">Enter Milk Quantity</string>
    <string name="enter_meat_name">Enter Meat Name</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="add_profile_image">Add profile image</string>
    <string name="designed_with_love_by_cobs">Designed with love by Cobs</string>
</resources>