<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddVegetableActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="6dp"
        android:layout_marginStart="1dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:text="@string/create_vegetable"
                android:textSize="24dp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="141dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="397dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vegetable_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_vegetable_name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="397dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vegetable_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint= "@string/enter_vegetable_price"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout3"
                android:layout_width="397dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vegetable_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter Vegetable Description" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout4"
                android:layout_width="397dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vegetable_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter Vegetable Quantity" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout5"
                android:layout_width="397dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vegetable_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter Vegetable Category" />
            </com.google.android.material.textfield.TextInputLayout>


            <ImageView
                android:id="@+id/vegetable_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="20dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/photo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" />

            <Button
                android:id="@+id/save_vegetable_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/save_vegetable"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/vegetable_image"
                tools:layout_editor_absoluteX="47dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_image"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/vegetable_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/vegetable_image"
                app:layout_constraintTop_toTopOf="@+id/vegetable_image" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>